# private-codepilot

./: .env  .gitignore  Makefile  README.md  pyproject.toml
private-codepilot/core/: embeddings_client.py  engine.py  prompt_client.py
private_codepilot/: __init__.py  ui.py
private_codepilot/core/: __init__.py  config.py  constants.py  embeddings_client.py  engine.py  llm_client.py
private_codepilot/util/: __init__.py  dict_to_object.py  hashing_helpers.py
